# fastApiForAws

./: .gitignore  Dockerfile  Makefile  docker-compose.yml
package/: README.md  pyproject.toml
package/srv/: __main__.py  config.py
